# django-bim

./: 404.html  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
legal/disclaimer/: index.html
quick_start/: index.html
resources/glossary/: index.html
resources/links/: index.html
search/: search_index.json
src/django-bim/: apps.py
src/django-bim/enums/: __init__.py  enum_ifc_address_type.py  enum_ifc_change_action.py  enum_ifc_state.py
src/django-bim/enums/actor/: __init__.py  enum_ifc_address_type.py
src/django-bim/fields/: __init__.py
src/django-bim/fields/model/: field_model_ifc_boolean.py  field_model_ifc_identifier.py  field_model_ifc_label.py  field_model_ifc_text.py  field_model_ifc_timestamp.py
src/django-bim/fields/model/measure/: field_model_ifc_boolean.py  field_model_ifc_identifier.py
src/django-bim/fixtures/: __init__.py
src/django-bim/forms/: __init__.py
src/django-bim/migrations/: __init__.py
src/django-bim/models/: __init__.py  model_ifc_actor_role.py  model_ifc_address.py  model_ifc_application.py  model_ifc_building.py  model_ifc_object.py  model_ifc_object_definition.py  model_ifc_person_organization.py  model_ifc_representation.py  model_ifc_representation_context.py  model_ifc_representation_item.py
src/django-bim/models/ifc/: model_ifc_actor_role.py  model_ifc_address.py  model_ifc_application.py  model_ifc_building.py  model_ifc_cartesian_point.py  model_ifc_local_placement.py  model_ifc_object.py  model_ifc_object_definition.py  model_ifc_object_placement.py  model_ifc_organization.py  model_ifc_owner_history.py  model_ifc_person.py  model_ifc_person_organization.py  model_ifc_product.py  model_ifc_product_representation.py  model_ifc_project.py  model_ifc_unit.py  model_ifc_unit_assignment.py  model_ifc_unit_length.py  model_ifc_unit_relation.py
src/django-bim/models/ifc/actor/: __init__.py  model_ifc_actor_role.py  model_ifc_organization.py  model_ifc_person.py
src/django-bim/models/ifc/geometry/: model_ifc_cartesian_point.py  model_ifc_geometry_curve.py  model_ifc_geometry_curve_line.py
src/django-bim/models/ifc/grid/: __init__.py  model_ifc_grid_axis.py
src/django-bim/models/ifc/placement/: model_ifc_placement_grid.py  model_ifc_placement_local.py  model_ifc_placement_object.py
src/django-bim/tests/: __init__.py  tests.py
src/django-bim/utils/: __init__.py
src/django-bim/views/: __init__.py
src/django-ifc/: apps.py  urls.py
src/django-ifc/admin/: __init__.py
src/django-ifc/enums/: __init__.py  enum_ifc_role.py  enum_ifc_state.py
src/django-ifc/fields/: __init__.py
src/django-ifc/fields/model/: __init__.py  field_model_ifc_guid.py  field_model_ifc_role_type.py
src/django-ifc/models/: model_ifc_actor_role.py  model_ifc_application.py  model_ifc_base.py  model_ifc_organization.py  model_ifc_owner_history.py  model_ifc_person.py  model_ifc_product.py  model_ifc_project.py  model_ifc_representation_context.py  model_ifc_root.py
src/django-ifc/tests/: __init__.py
src/django-ifc/utils/: validate_ifc_guid.py
src/django-ifc/views/: __init__.py
src/django_bim/: apps.py
src/django_bim/admin/: __init__.py
src/django_bim/enums/: __init__.py  enum_ifc_change_action.py
src/django_bim/enums/actor/: enum_ifc_role.py
src/django_bim/fields/: __init__.py
src/django_bim/fields/model/: __init__.py  field_model_ifc_guid.py  field_model_ifc_role_enum.py
src/django_bim/fixtures/: __init__.py
src/django_bim/forms/: __init__.py
src/django_bim/migrations/: __init__.py
src/django_bim/models/: __init__.py
src/django_bim/models/ifc/: __init__.py  model_ifc_building.py  model_ifc_object_definition.py  model_ifc_product_representation.py  model_ifc_root.py
src/django_bim/utils/: __init__.py  validate_ifc_guid.py
(+27 files in other folders)
