[tool.poetry]
name = "django-bim"
version = "0.0.1"
description = "A Django plugin to manage building data based on IFC"
authors = ["Starling Associates <info@starling.associates>"]
license = "Apache-2.0"

packages = [
    { include = "django-bim", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
django_ifc_manage = "django_ifc.manage:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/starling-cloud/django-bim"
"Repository" = "https://github.com/starling-cloud/django-bim"

[tool.black]
line-length = 79