[tool.poetry]
name = "django-bim"
version = "0.0.1"
description = "A Django plugin to manage building data based on IFC"
authors = ["Starling Associates <info@starling.associates>"]
license = "Apache-2.0"
homepage = "https://www.djangobim.com"
repository = "https://github.com/starling-cloud/django-bim"
documentation = "https://www.djangobim.com/docs"
packages = [
    { include = "django_bim", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://www.djangobim.com"
"Repository" = "https://github.com/starling-cloud/django-bim"
"Documentation" = "https://www.djangobim.com/docs"
"Tracker" = "https://github.com/starling-cloud/django-bim/issues"

[tool.black]
line-length = 79
