# -*- coding: utf-8 -*-


# =============================================================================
# Project Configuration
# =============================================================================

[tool.poetry]
name = "django-bim"
version = "0.0.1"
description = "A Django plugin to manage building data based on IFC"
authors = ["Starling Associates <info@starling.associates>"]
license = "Apache-2.0"
homepage = "https://www.djangobim.com"
repository = "https://github.com/starling-cloud/django-bim"
documentation = "https://www.djangobim.com/docs"
packages = [
    { include = "django_bim", from = "src" },
]


# =============================================================================
# Dependencies
# =============================================================================

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"


# =============================================================================
# Development Dependencies
# =============================================================================

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0" # Code coverage for tests
black = "^24.8.0" # Code formatter
flake8 = "^7.1.0" # Linter for code quality
mypy = "^1.11.1" # Static type checker
sphinx = "^8.0.2" # Documentation generator
isort = "^5.10.1"


# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# =============================================================================
# Other
# =============================================================================

[tool.poetry.urls]
"Homepage" = "https://www.djangobim.com"
"Repository" = "https://github.com/starling-cloud/django-bim"
"Documentation" = "https://www.djangobim.com/docs"
"Tracker" = "https://github.com/starling-cloud/django-bim/issues"

[tool.black]
line-length = 79
